# sqd-portal

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.yaml  config.yml  docker-compose.yml  ed25519.sk  mainnet.config.yml  mainnet.env  tethys.config.yml  tethys.env
.agents/skills/github-release/: SKILL.md  release-template.md
.github/workflows/: docker-reusable.yml  docker.yml  tests.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: cm.yaml  config.tpl  gateway.yaml  ingress.yaml  ns.yaml  pod-monitor.yaml  secrets.yaml  service.yaml
docs/: GRACEFUL_SHUTDOWN.md
docs/decisions/: ADR-002-error-taxonomy.md
docs/openapi/: 01-introduction.md  02-blockchain-forks.md  03-getting-started.md  scalar_template.html
docs/self-hosting/: self_hosting.md
examples/devnet-evm/: README.md  config.yaml  docker-compose.yaml  start.sh
examples/devnet-evm/e2e/: README.md  dummy-contract-client.json  empty-network-datasets.yml  fake-hotblocks-db.py  portal-hotblocks-only.config.yml  run-fake-hotblocks-portal-e2e.sh
harness/: Cargo.toml  README.md
harness/src/: artifact.rs  driver.rs  dummy_chain.rs  keys.rs  lib.rs  metrics_audit.rs  model.rs  portal.rs  validators.rs  world.rs
harness/src/stubs/: hotblocks.rs  mod.rs  publisher.rs  registry.rs  worker.rs
harness/tests/: ct1_smoke.rs
resources/: block_plain_with_cols.json  block_plain_with_in.json  block_plain_with_not.json  block_plain_with_or.json  block_remote_join2.json  block_simple_join.json  block_simple_with_sort.json  block_tx_join_with_not.json  block_tx_join_with_or.json  block_tx_join_with_where_on_tx.json  block_tx_local_join.json  block_tx_local_join2.json  schemas.json  workers.json
spec/: .spec-lint-ignore  01-overview.md  02-requirements.md  03-data-model.md  04-operations.md  05-dependencies.md  07-invariants.md  08-liveness.md  09-failure-model.md  11-performance.md  12-observability.md  13-conformance.md  14-interface-binding.md  15-parameters.md  README.md
spec/decisions/: ADR-001-truncation-over-error.md  ADR-002-skip-assignment-verification.md  ADR-003-real-time-proxy.md  ADR-004-worker-penalties.md  ADR-005-two-phase-shutdown.md  ADR-006-bandwidth-limiting-resource.md  ADR-007-overload-529.md  ADR-008-config-unknown-fields-warn.md  ADR-010-upstream-deadline-below-client.md  ADR-011-error-taxonomy.md  ADR-012-retry-after-on-shed.md  ADR-013-assignment-staleness-bound.md  ADR-014-contract-reconciliation.md  ADR-015-real-time-connection-replay.md
src/: api_types.rs  block_number_by_timestamp.rs  cli.rs  config.rs  datasets.rs  hotblocks.rs  http_server.rs  lib.rs  main.rs  metrics.rs  network_state.rs  openapi.rs  query.rs  server.rs  stream.rs  task.rs  task_manager.rs
src/commercial/: client.rs  concurrency.rs  config.rs  evaluate.rs  extractor.rs  meter.rs  mod.rs  registry.rs  reporter.rs  store.rs  tally.rs  types.rs  zero_limits.rs
src/controller/: mod.rs  read_scheduler.rs  stream.rs  task_manager.rs  timeouts.rs
src/endpoints/: block_number_by_timestamp.rs  mod.rs  stream.rs
src/network/: client.rs  contracts_state.rs  datasets.rs  mod.rs  priorities.rs  state.rs  storage.rs
src/sql/: extractor.rs  metadata.rs  mod.rs  query.rs  rewrite_target.rs
src/types/: api_types.rs  chunk.rs  common.rs  dataset.rs  errors.rs  mod.rs  request.rs  request_error.rs
src/utils/: conversion.rs  gz_utils.rs  internal_query.rs  logging.rs  measuring_mutex.rs  measuring_rwlock.rs  mod.rs  once.rs  option_ext.rs  sliding_array.rs  string_pool.rs
tools/: spec-lint.py
tools/portal-status/: Cargo.toml
tools/portal-status/src/: main.rs
