[package]
name = "sqd-portal"
version = "0.4.1"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3.5"
axum = { version = "0.7", features = ["http2"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
dotenv = "0.15"
flate2 = "1.0.33"
futures = "0.3"
itertools = "0.12"
lazy_static = "1.4.0"
parking_lot = "0.12"
prometheus-client = "0.22"
reqwest = { version = "0.12.7", features = ["stream", "gzip", "json"] }
scopeguard = "1.2"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.9"
serde_yaml = "0.9"
static_assertions = "1.1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
tokio-util = "0.7.11"
tracing = { version = "0.1", features = ["async-await"] }
tracing-futures = { version = "0.2.5", features = ["tokio", "futures-03"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tower-http = { version = "0.6.1", features = ["cors"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }

sqd-contract-client = { git = "https://github.com/subsquid/sqd-network.git", version = "1.0.7" }
sqd-messages = { git = "https://github.com/subsquid/sqd-network.git", version = "1.1.4", features = ["semver"] }
sqd-network-transport = { git = "https://github.com/subsquid/sqd-network.git", version = "1.0.25", features = ["gateway", "metrics"] }
