[package]
name = "sqd-portal"
version = "0.8.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3.5"
async-compression = { version = "0.4.20", features = ["tokio", "gzip"] }
atomic_enum = { version = "0.3.0", features = ["cas"] }
axum = { version = "0.7", features = ["http2"] }
base64 = "0.22"
bimap = "0.6.3"
bytes = "1.9"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
dotenv = "0.15"
flate2 = "1.0.33"
futures = "0.3"
itertools = "0.12"
lazy_static = "1.4.0"
num-rational = "0.4"
num-traits = "0.2.19"
prometheus-client = "0.23"
reqwest = { version = "0.12.7", features = ["stream", "gzip", "json"] }
scopeguard = "1.2"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"
serde_yaml = "0.9"
static_assertions = "1.1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
tokio-util = "0.7.11"
tower-http = { version = "0.6.1", features = ["cors", "decompression-gzip", "request-id", "trace"] }
tracing = { version = "0.1", features = ["async-await"] }
tracing-futures = { version = "0.2.5", features = ["tokio", "futures-03"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["profiling"] }

sqd-assignments = { git = "https://github.com/subsquid/sqd-network.git", rev = "c795860", features = ["reader"] }
sqd-contract-client = { git = "https://github.com/subsquid/sqd-network.git", rev = "c795860", version = "1.2.1" }
sqd-messages = { git = "https://github.com/subsquid/sqd-network.git", rev = "c795860", version = "2.0.1", features = ["semver", "bitstring", "assignment_reader"] }
sqd-network-transport = { git = "https://github.com/subsquid/sqd-network.git", rev = "c795860", version = "3.0.0", features = ["portal", "metrics"] }

sqd-primitives = { git = "https://github.com/subsquid/data.git", rev = "0e4522f3", features = ["serde"] }
sqd-query = { git = "https://github.com/subsquid/data.git", rev = "0e4522f3" }
