[package]
name = "sqd-portal"
version = "0.8.12"
edition = "2021"

[features]
sql = ["dep:once_cell", "dep:prost", "dep:substrait", "dep:sql_query_plan"]

[dependencies]
anyhow = "1"
async-compression = { version = "0.4.20", features = ["tokio", "gzip"] }
async-stream = "0.3.5"
atomic_enum = { version = "0.3.0", features = ["cas"] }
axum = { version = "0.7", features = ["http2"] }
axum-extra = { version = "0.9", features = ["query"] }
base64 = "0.22"
bimap = "0.6.3"
bytes = "1.9"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
dotenv = "0.15"
flate2 = "1.0.33"
futures = "0.3"
hex-literal = "0.4.1"
itertools = "0.12"
lazy_static = "1.4.0"
libz-ng-sys = "1.1.23"
num-rational = "0.4"
num-traits = "0.2.19"
once_cell = { version = "1.21", optional = true }
prometheus-client = "0.23"
prost = { version = "0.13.4", optional = true }
rand = "0.9.2"
reqwest = { version = "0.12.7", features = ["stream", "gzip", "json"] }
scopeguard = "1.2"
semver = "1"
sentry = { version = "0.46.0", features = ["tracing", "tower"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11"
serde_yaml = "0.9"
static_assertions = "1.1.0"
substrait = { version = "0.48.0", features = ["serde", "parse"], optional = true }
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = "0.1"
tokio-util = "0.7.11"
tower = "0.5"
tower-http = { version = "0.6.1", features = ["cors", "decompression-gzip", "request-id", "trace"] }
tracing = { version = "0.1", features = ["async-await"] }
tracing-futures = { version = "0.2.5", features = ["tokio", "futures-03"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }

[dev-dependencies]
proptest = "1.4.0"
proptest_async = { version = "0.2.1", default-features = false, features = ["tokio"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { version = "0.6", features = ["profiling"] }

sqd-assignments = { git = "https://github.com/subsquid/sqd-network.git", rev = "020e5e9", features = ["reader"] }
sqd-contract-client = { git = "https://github.com/subsquid/sqd-network.git", rev = "020e5e9", version = "1.2.1" }
sqd-messages = { git = "https://github.com/subsquid/sqd-network.git", rev = "020e5e9", version = "2.0.1", features = ["semver", "bitstring"] }
sqd-network-transport = { git = "https://github.com/subsquid/sqd-network.git", rev = "020e5e9", version = "3.0.0", features = ["portal", "metrics"] }

sqd-primitives = { git = "https://github.com/subsquid/data.git", rev = "3c76f02f", features = ["serde"] }
sqd-query = { git = "https://github.com/subsquid/data.git", rev = "3c76f02f" }

sql_query_plan = { git = "https://github.com/subsquid/qplan.git", rev = "2e61b51", optional = true }

