[package]
name = "harness"
version = "0.1.0"
edition = "2021"
publish = false
description = "Phase-0 conformance harness for the SQD Portal (spec/13-conformance.md)"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
reqwest = { version = "0.12", default-features = false, features = ["json"] }
flate2 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
tempfile = "3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libp2p-identity = { version = "0.2", features = ["ed25519", "rand", "peerid"] }

# Same pinned rev as the portal's Cargo.toml — the stubs must speak the exact wire ABI.
sqd-assignments = { git = "https://github.com/subsquid/sqd-network.git", rev = "e9a3434", features = ["builder", "reader"] }
sqd-messages = { git = "https://github.com/subsquid/sqd-network.git", rev = "e9a3434", features = ["signatures"] }
sqd-network-transport = { git = "https://github.com/subsquid/sqd-network.git", rev = "e9a3434", features = ["worker"] }
sqd-contract-client = { git = "https://github.com/subsquid/sqd-network.git", rev = "e9a3434" }

[profile.dev]
# The libp2p tree is slow at opt-level 0 and QUIC handshakes are timing-sensitive.
opt-level = 1
